--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /* your code */
+
+tr:nth-child(even){
+	background-color:#f2f2f2
+}
+table{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+	border-collapse:collapse;
+}
+
+th , td{
+	border:1px solid #ddd;
+	padding:15px;
+}
+
+th{
+	background-color:#135d85;
+	color:white;
+}
+
